# convergio-longrunning

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  release-please-config.json
crates/convergio-longrunning/: Cargo.toml
crates/convergio-longrunning/src/: budget.rs  checkpoint.rs  delegation.rs  delegation_tests.rs  ext.rs  heartbeat.rs  lib.rs  mcp_defs.rs  progress.rs  reaper.rs  routes.rs  schema.rs  traits.rs  types.rs
docs/adr/: 001-extraction.md  002-audit-security-fixes.md
