[package]
name = "convergio-longrunning"
description = "Long-running task manager — progress tracking, cancellation, heartbeat"
version = "0.3.0"
edition.workspace = true
license.workspace = true

[dependencies]
convergio-types = { workspace = true }
convergio-db = { workspace = true }
convergio-ipc = { workspace = true }
convergio-telemetry = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
r2d2 = { workspace = true }
axum = { workspace = true }
