[package]
name = "convergio-longrunning"
description = "Long-running task manager — progress tracking, cancellation, heartbeat"
version = "0.4.5"
edition.workspace = true
license.workspace = true
repository = "https://github.com/Roberdan/convergio-longrunning"

[dependencies]
convergio-types = { workspace = true }
convergio-db = { workspace = true }
convergio-ipc = { workspace = true }
convergio-telemetry = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
r2d2 = { workspace = true }
axum = { workspace = true }
